# SentinelVision

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  PROMPT_01_ARCHITECT.md  PROMPT_02_REPOSITORY_BLUEPRINT.md  PROMPT_03_BOOTSTRAP_REPOSITORY.md  PROMPT_04_PHASE_2_1_FOUNDATION.md  PROMPT_05_PHASE_2_2_INFRASTRUCTURE.md  PROMPT_06_PHASE_2_3_PLUGIN_SYSTEM.md  PROMPT_07_VERIFY_AND_COMPLETE_PHASE2.md  PROMPT_08_FINAL_PHASE2_AUDIT.md  README.md  SECURITY.md  alembic.ini  auditor.py  checklist.txt  docker-compose.yml  eval.py  implementer.py  precise_implementer.py  pyproject.toml
.agents/: AGENTS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
LICENSES/: README.md
adr/: ADR-001-layered-architecture.md  ADR-002-byttrack-vs-deepsort.md  ADR-003-redis-streams-vs-kafka.md  ADR-004-openvino-primary-inference.md  ADR-005-osnet-reid.md  ADR-006-postgresql-primary-db.md  ADR-007-fastapi-backend.md  ADR-008-multiprocessing-camera-workers.md  ADR-009-plugin-contract-design.md  ADR-010-jwt-auth-strategy.md  README.md
backend/: README.md  main.py
benchmarks/: README.md  detection_throughput.py  plugin_bench.py  reid_throughput.py
config/: README.md  logging.yaml  sentinel.development.yaml  sentinel.example.yaml  sentinel.testing.yaml  sentinel.yaml
datasets/: .gitignore  README.md
deployment/: README.md  docker-compose.prod.yml
docker/: Dockerfile.backend  Dockerfile.camera_worker  README.md  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.yml
docs/: README.md
examples/: README.md  dummy_plugin.py
(+311 files in other folders)
